--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^10.0.1",
     "bootstrap": "^4.1.1",
     "firebase": ">= 5.5.7 <8",
     "rxjs": "~6.4.0",
